gotta mutate those lists