@@ -32,7 +32,7 @@ import io.opentelemetry.api.metrics.Meter;
 import io.opentelemetry.sdk.metrics.SdkMeterProvider;
 import io.opentelemetry.sdk.metrics.data.MetricData;
 import io.opentelemetry.sdk.metrics.export.PeriodicMetricReader;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -81,8 +81,9 @@ class InquireChannelCmdCollectorTest {
     classUnderTest.accept(context);
     reader.forceFlush().join(1, TimeUnit.SECONDS);
     List<String> metricsList =
-        Arrays.asList(
-            "mq.message.retry.count", "mq.message.received.count", "mq.message.sent.count");
+        new ArrayList<>(
+            List.of(
+                "mq.message.retry.count", "mq.message.received.count", "mq.message.sent.count"));
     for (MetricData metric : testExporter.getExportedMetrics()) {
       if (metricsList.remove(metric.getName())) {
         if (metric.getName().equals("mq.message.retry.count")) {
