@@ -31,7 +31,7 @@ import io.opentelemetry.sdk.metrics.SdkMeterProvider;
 import io.opentelemetry.sdk.metrics.data.LongPointData;
 import io.opentelemetry.sdk.metrics.data.MetricData;
 import io.opentelemetry.sdk.metrics.export.PeriodicMetricReader;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -84,7 +84,8 @@ public class TopicMetricsCollectorTest {
     classUnderTest.accept(context);
     reader.forceFlush().join(1, TimeUnit.SECONDS);
 
-    List<String> metricsList = Arrays.asList("mq.publish.count", "mq.subscription.count");
+    List<String> metricsList =
+        new ArrayList<>(List.of("mq.publish.count", "mq.subscription.count"));
 
     for (MetricData metric : testExporter.getExportedMetrics()) {
       if (metricsList.remove(metric.getName())) {
